--- a/examples/mnist-client/CMakeLists.txt
+++ b/examples/mnist-client/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.25)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_VERBOSE_MAKEFILE ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(OpenCV)
 if (NOT OpenCV_FOUND)
