--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -80,6 +80,7 @@ knp_add_library("${PROJECT_NAME}"
     impl/message_bus_impl.h
     impl/message_header.cpp
     impl/messaging/message_envelope.cpp
+    impl/messaging/uid_marshal.h
     impl/messaging/spike_message_impl.h
     impl/messaging/spike_message.cpp
     impl/messaging/synaptic_impact_message_impl.h
@@ -104,12 +105,6 @@ target_include_directories("${PROJECT_NAME}" PRIVATE ${Boost_INCLUDE_DIRS} "impl
 add_dependencies("${PROJECT_NAME}" "GENERATE_${PROJECT_NAME}_messaging" "${PROJECT_NAME}_messaging")
 
 # add_clang_tidy("${PROJECT_NAME}" CONFIG_FILE_PATH "${CMAKE_TIDY_CONFIG}" EXTRA_ARGS "--use-color")
-
-if(KNP_ENABLE_COVERAGE)
-    include(codecoverage)
-    append_coverage_compiler_flags()
-    link_target_with_gcov("${PROJECT_NAME}")
-endif()
 
 
 #
