Clang formatter config fix

--- a/CPPLINT.cfg
+++ b/CPPLINT.cfg
@@ -21,3 +21,6 @@ filter=-whitespace/indent,-readability/nolint,-readability/todo,-build/include_s
 
 # Python framework macroses.
 filter=-readability/braces
+
+# Need to support OCLint special comments.
+filter=-whitespace/comments
