--- a/knp/devices-library/CMakeLists.txt
+++ b/knp/devices-library/CMakeLists.txt
@@ -59,34 +59,34 @@ set_target_properties(
     SOVERSION "${CMAKE_PROJECT_VERSION_MAJOR}"
 )
 
-install(TARGETS "${PROJECT_NAME}-cpu"
-        COMPONENT "framework-dev"
-        EXPORT "${PROJECT_NAME}-cpu"
-        LIBRARY
-#        DESTINATION "${CMAKE_INSTALL_LIBDIR}/knp"
-)
+if (KNP_INSTALL)
+    install(TARGETS "${PROJECT_NAME}-cpu"
+            COMPONENT "framework-dev"
+            EXPORT "${PROJECT_NAME}-cpu"
+            LIBRARY
+    )
 
-install(TARGETS "${PROJECT_NAME}-cpu_static"
-        EXPORT "${PROJECT_NAME}-cpu_static"
-        COMPONENT "framework-dev"
-        ARCHIVE)
+    install(TARGETS "${PROJECT_NAME}-cpu_static"
+            EXPORT "${PROJECT_NAME}-cpu_static"
+            COMPONENT "framework-dev"
+            ARCHIVE)
 
-# Install for AltAI
-install(TARGETS "${PROJECT_NAME}-altai"
-        COMPONENT "framework-dev"
-        EXPORT "${PROJECT_NAME}-altai"
-        LIBRARY
-#        DESTINATION "${CMAKE_INSTALL_LIBDIR}/knp"
-)
+    # Install for AltAI
+    install(TARGETS "${PROJECT_NAME}-altai"
+            COMPONENT "framework-dev"
+            EXPORT "${PROJECT_NAME}-altai"
+            LIBRARY
+    )
 
-install(TARGETS "${PROJECT_NAME}-altai_static"
-        EXPORT "${PROJECT_NAME}-altai_static"
-        COMPONENT "framework-dev"
-        ARCHIVE)
+    install(TARGETS "${PROJECT_NAME}-altai_static"
+            EXPORT "${PROJECT_NAME}-altai_static"
+            COMPONENT "framework-dev"
+            ARCHIVE)
 
-#add_clang_tidy("${PROJECT_NAME}" CONFIG_FILE_PATH "${CMAKE_TIDY_CONFIG}" EXTRA_ARGS "--use-color")
+    #add_clang_tidy("${PROJECT_NAME}" CONFIG_FILE_PATH "${CMAKE_TIDY_CONFIG}" EXTRA_ARGS "--use-color")
 
-install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
-        COMPONENT "framework-dev"
-        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp"
-        FILES_MATCHING PATTERN "*.h")
+    install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
+            COMPONENT "framework-dev"
+            DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp"
+            FILES_MATCHING PATTERN "*.h")
+endif()
