--- a/knp/neuron-traits-library/CMakeLists.txt
+++ b/knp/neuron-traits-library/CMakeLists.txt
@@ -36,11 +36,13 @@ target_include_directories("${PROJECT_NAME}" INTERFACE
 
 target_link_libraries("${PROJECT_NAME}" INTERFACE Boost::headers KNP::Meta)
 
-install(TARGETS "${PROJECT_NAME}"
-        EXPORT "${PROJECT_NAME}"
-        COMPONENT "framework-dev")
+if (KNP_INSTALL)
+    install(TARGETS "${PROJECT_NAME}"
+            EXPORT "${PROJECT_NAME}"
+            COMPONENT "framework-dev")
 
-install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
-        COMPONENT "framework-dev"
-        DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp"
-        FILES_MATCHING PATTERN "*.h")
+    install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
+            COMPONENT "framework-dev"
+            DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp"
+            FILES_MATCHING PATTERN "*.h")
+endif()
