--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -207,7 +207,8 @@ if (MSVC)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
 endif()
 
-set(CPM_SOURCE_CACHE_DEFAULT "${CMAKE_CURRENT_SOURCE_DIR}/third-party" CACHE STRING "")
+set(CPM_SOURCE_CACHE_DEFAULT "${CMAKE_CURRENT_SOURCE_DIR}/third-party" CACHE STRING "" FORCE)
+set(CPM_SOURCE_CACHE "${CMAKE_CURRENT_SOURCE_DIR}/third-party" CACHE STRING "" FORCE)
 
 # Make cache variables for installation destinations.
 include(GNUInstallDirs)
@@ -217,6 +218,15 @@ if (MSVC AND CMAKE_GENERATOR STREQUAL "Ninja")
 else()
     set(ZMQ_ENABLE_PRECOMPS ON)
 endif()
+
+macro(install)
+    # Special hack needs to prevent redundant packages generation by third-party.
+    if (CMAKE_CURRENT_SOURCE_DIR MATCHES "${CPM_SOURCE_CACHE}/.*" OR CMAKE_CURRENT_SOURCE_DIR MATCHES "${CPM_SOURCE_CACHE_DEFAULT}/.*")
+        message(STATUS "Third-party installation will be skipped: ${CMAKE_CURRENT_SOURCE_DIR}")
+        return()
+    endif()
+    _install(${ARGV})
+endmacro()
 
 add_third_party(NAME "libzmq"
                 GITHUB_REPOSITORY "zeromq/libzmq"
@@ -239,8 +249,12 @@ add_third_party("gh:HDFGroup/hdf5#hdf5_1.14.4"
                 GIT_SHALLOW ON
                 FIND_PACKAGE_ARGUMENTS "NAMES hdf5 libhdf5 hdf5-static"
                 OPTIONS
+                    "HDF5_EXTERNALLY_CONFIGURED ON"
+                    "HDF5_BUILD_DOC OFF"
                     "HDF5_NO_PACKAGES ON"
-                    "BUILD_SHARED_LIBS ON"
+                    "HDF5_BUILD_SHARED_LIBS ON"
+                    "HDF5_BUILD_TOOLS OFF"
+                    "HDF5_BUILD_UTILS OFF"
                     "HDF5_VOL_ALLOW_EXTERNAL YES")  # "HDF5_ALLOW_EXTERNAL_SUPPORT GIT" SZIP_USE_EXTERNAL
 
 add_third_party("gh:BlueBrain/HighFive@2.9.0"
@@ -250,6 +264,7 @@ add_third_party("gh:BlueBrain/HighFive@2.9.0"
                     "HIGHFIVE_EXAMPLES OFF"
                     "HIGHFIVE_BUILD_DOCS OFF"
                     "HIGHFIVE_USE_BOOST OFF"
+                    "HIGHFIVE_UNIT_TESTS OFF"
                     "HDF5_C_LIBRARIES ${HDF5_LIBRARIES_TO_EXPORT}")
 
 # End of LibHDF5.
@@ -294,8 +309,8 @@ if (KNP_BUILD_TESTS)
                         "INSTALL_GTEST OFF")
 endif()
 
-file(GLOB THIRD_PARTY_INCLUDES LIST_DIRECTORIES true "third-party/**/include")
-include_directories(third-party ${THIRD_PARTY_INCLUDES})
+file(GLOB THIRD_PARTY_INCLUDES LIST_DIRECTORIES true "${CPM_SOURCE_CACHE}/**/include")
+include_directories("${CPM_SOURCE_CACHE}" ${THIRD_PARTY_INCLUDES})
 
 if (MSVC)
     set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS FALSE)
@@ -325,9 +340,9 @@ endif()
 set(CPACK_PACKAGE_NAME "${PROJECT_NAME}" CACHE STRING "The resulting package name")
 
 #SET(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}.${CMAKE_SYSTEM_PROCESSOR}")
-set(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}")
+#set(CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${PROJECT_VERSION}")
 set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
-set(CPACK_PACKAGE_ICON "doc/html/img/neuromorphic-platform.svg")
+set(CPACK_PACKAGE_ICON "packaging/neuromorphic-platform.svg")
 
 set(CPACK_PACKAGE_VERSION_MAJOR ${CMAKE_PROJECT_VERSION_MAJOR})
 set(CPACK_PACKAGE_VERSION_MINOR ${CMAKE_PROJECT_VERSION_MINOR})
@@ -356,9 +371,7 @@ set(CPACK_INSTALL_DEFAULT_DIRECTORY_PERMISSIONS
         WORLD_READ WORLD_EXECUTE)
 
 # On Linux, grouping must be ignored: one component corresponds to one package.
-#set(CPACK_COMPONENTS_GROUPING IGNORE)
-set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
-set(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
+set(CPACK_COMPONENTS_GROUPING IGNORE)
 
 
 #
@@ -367,6 +380,8 @@ set(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
 
 set(CPACK_DEB_PACKAGE_COMPONENT ON)
 set(CPACK_DEB_COMPONENT_INSTALL ON)
+#set(CPACK_COMPONENTS_GROUPING ONE_PER_GROUP)
+set(CPACK_DEBIAN_ENABLE_COMPONENT_DEPENDS ON)
 
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Artiom N.")
 set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "${CPACK_PACKAGE_DESCRIPTION}")
@@ -375,8 +390,6 @@ set(CPACK_DEBIAN_PACKAGE_SECTION "science")
 
 set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
 
-#set(CPACK_DEBIAN_PACKAGE_NAME ${PROJECT_NAME}-dev)
-#set(CPACK_DEBIAN_FILE_NAME "${PROJECT_NAME}-dev_${PROJECT_VERSION}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE}.deb")
 set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
 
 set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS OFF)
@@ -395,5 +408,27 @@ set(CPACK_RPM_PACKAGE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
 set(CPACK_RPM_PACKAGE_DESCRIPTION "${CPACK_PACKAGE_DESCRIPTION}")
 set(CPACK_RPM_PACKAGE_GROUP "science")
 
+
+#
+# Components.
+#
+
+cpack_add_component(cpp-framework
+        #            DISPLAY_NAME knp-"${COMPONENT_NAME}"
+        DESCRIPTION "${PROJECT_DESCRIPTION}"
+        DISABLED
+        GROUP development
+        DEPENDS "backend" "libboost-all (= ${Boost_VERSION})" "libhdf5" "libzmq5")
+
+#cpack_add_component("${COMPONENT_NAME}-dev"
+#        DISPLAY_NAME knp-"${COMPONENT_NAME}-dev"
+#        DESCRIPTION "${PROJECT_DESCRIPTION}"
+#        DISABLED
+#        #             GROUP dev
+#        DEPENDS "knp-backend" "libboost-all (= ${Boost_VERSION})" "libhdf5" "libzmq5"
+#        #            INSTALL_TYPES type1 type2 ...
+#        )
+
+set(CPACK_DEBIAN_PACKAGE_DEBUG ON)
 
 include (CPack)
