--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -120,25 +120,24 @@ configure_file(
     "${CMAKE_CURRENT_BINARY_DIR}/include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/version.h")
 
 if (KNP_INSTALL)
+    set(COMPONENT_NAME "cpp-framework")
+
     install(TARGETS "${PROJECT_NAME}_messaging"
             EXPORT "${PROJECT_NAME}_messaging"
-            COMPONENT "framework-dev")
+            COMPONENT "${COMPONENT_NAME}-dev")
 
     install(TARGETS "${PROJECT_NAME}"
             EXPORT "${PROJECT_NAME}"
             ARCHIVE
-            COMPONENT "framework-dev")
-
-    #install(EXPORT "${PROJECT_NAME}" DESTINATION knp
-    #        COMPONENT "framework-dev")
+            COMPONENT "${COMPONENT_NAME}-dev")
 
     install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
-            COMPONENT "framework-dev"
+            COMPONENT "${COMPONENT_NAME}-dev"
             DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp"
             FILES_MATCHING PATTERN "*.h")
 
     install(FILES
             "${CMAKE_CURRENT_BINARY_DIR}/include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}/version.h"
-            COMPONENT "framework-dev"
+            COMPONENT "${COMPONENT_NAME}-dev"
             DESTINATION "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}")
 endif()
