--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -35,12 +35,14 @@ target_include_directories("${PROJECT_NAME}" INTERFACE
 target_link_libraries("${PROJECT_NAME}" INTERFACE Boost::headers KNP::Meta)
 
 if (KNP_INSTALL)
+    set(COMPONENT_NAME "cpp-framework")
+
     install(TARGETS "${PROJECT_NAME}"
         EXPORT "${PROJECT_NAME}"
-        COMPONENT "framework-dev")
+        COMPONENT "${COMPONENT_NAME}-dev")
 
     install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
-            COMPONENT "framework-dev"
+            COMPONENT "${COMPONENT_NAME}-dev"
             DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp"
             FILES_MATCHING PATTERN "*.h")
 endif()
