--- a/knp/meta-library/CMakeLists.txt
+++ b/knp/meta-library/CMakeLists.txt
@@ -42,12 +42,14 @@ target_include_directories("${PROJECT_NAME}" INTERFACE
 target_include_directories("${PROJECT_NAME}" INTERFACE ${Boost_INCLUDE_DIRS})
 
 if (KNP_INSTALL)
+    set(COMPONENT_NAME "cpp-framework")
+
     install(TARGETS "${PROJECT_NAME}"
             EXPORT "${PROJECT_NAME}"
-            COMPONENT "framework-dev")
+            COMPONENT "${COMPONENT_NAME}-dev")
 
     install(DIRECTORY "include/${${PROJECT_NAME}_PUBLIC_INCLUDE_DIR}"
-            COMPONENT "framework-dev"
+            COMPONENT "${COMPONENT_NAME}-dev"
             DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/knp"
             FILES_MATCHING PATTERN "*.h")
 endif()
