--- a/knp/python-framework/CMakeLists.txt
+++ b/knp/python-framework/CMakeLists.txt
@@ -91,22 +91,20 @@ if(KNP_BUILD_TESTS)
 endif()
 
 if (KNP_INSTALL)
+    set(COMPONENT_NAME "python3-framework")
+
     install(DIRECTORY
             "${KNP_PYTHON_OUTPUT_DIRECTORY}/knp"
-            COMPONENT "python"
+            COMPONENT "${COMPONENT_NAME}"
             DESTINATION "${CMAKE_INSTALL_LIBDIR}/python3"
             PATTERN "__pycache__" EXCLUDE
             PATTERN "__init__.pyi" EXCLUDE
-            PATTERN "*.egg-info" EXCLUDE)
+            PATTERN "*.egg-info" EXCLUDE
+            PATTERN "*.gcno" EXCLUDE)
 
     knp_packaging_set_parameters("${COMPONENT_NAME}" "${PROJECT_NAME}"
             DESCRIPTION "${PROJECT_DESCRIPTION}"
-            DEPENDS framework)
-
-    knp_get_component_name("${PROJECT_NAME}" COMPONENT_NAME)
-    knp_get_component_var_name("${COMPONENT_NAME}" COMPONENT_VAR)
-    set(CPACK_DEBIAN_${COMPONENT_VAR}_PACKAGE_DEPENDS "python3 (>= 3.10)"
-        CACHE STRING "${PROJECT_NAME} deb package dependencies")
+            DEPENDS "cpp-framework" "python3 (>= 3.10)")
 endif()
 
 #
@@ -114,7 +112,6 @@ endif()
 #
 
 if(KNP_PYTHON_BUILD_WHEEL)
-    #message(FATAL_ERROR ${Python3_EXECUTABLE})
     add_custom_command(
         OUTPUT "${KNP_PYTHON_OUTPUT_DIRECTORY}/dist/knp-${PROJECT_VERSION}-py3-none-any.whl"
         COMMAND "${Python3_EXECUTABLE}" -m build --wheel
