--- a/knp/python-framework/packaging/common/setup.cfg
+++ b/knp/python-framework/packaging/common/setup.cfg
@@ -6,7 +6,7 @@ version: file: VERSION
 license = Apache License, Version 2.0
 license_files = LICENSE.txt
 author = AO Kaspersky Lab
-author_email = author@kaspersky.com
+author_email = support@kaspersky.com
 description = Kaspersky Neuromorphic Platform Python framework
 long_description = file: README.md, AUTHORS
 long_description_content_type = text/markdown
