--- a/knp/autodoc/CMakeLists.txt
+++ b/knp/autodoc/CMakeLists.txt
@@ -66,7 +66,7 @@ if(KNP_BUILD_DOCUMENTATION)
         "${CMAKE_CURRENT_SOURCE_DIR}/common_files"
         "${CMAKE_CURRENT_SOURCE_DIR}/cmake"
         "${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt")
-    set(DOXYGEN_EXCLUDE_PATTERNS *.descr* .descr */impl/* */tests/* common_files */cmake/* CMakeLists.txt impexp.h *.py)
+    set(DOXYGEN_EXCLUDE_PATTERNS *.descr* .descr */impl/* */tests/* common_files */cmake/* CMakeLists.txt impexp.h */knp/python_framework/* *.py)
     set(DOXYGEN_EXTENSION_MAPPING "no_extension=C++")
     set(DOXYGEN_EXTRACT_ALL NO)
     set(DOXYGEN_GENERATE_HTML YES)
