--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -6,12 +6,12 @@ on:
   push:
     branches: [ "master" ]
     paths:
-      - 'docker/build_image/**'
+      - 'docker/build-image/**'
       - '.github/workflows/docker-build-image.yml'
   pull_request:
     branches: [ "master" ]
     paths:
-      - 'docker/build_image/**'
+      - 'docker/build-image/**'
       - '.github/workflows/docker-build-image.yml'
 
 jobs:
