--- a/.github/workflows/docker-build-image.yml
+++ b/.github/workflows/docker-build-image.yml
@@ -29,3 +29,5 @@ jobs:
       - name: Build the Docker image for KNP build
         working-directory: docker/build-image
         run: docker build . --file Dockerfile --tag knp-build-image-amd64
+        timeout-minutes: 180  # Adjust the timeout as needed
+        continue-on-error: true
